# crawlery

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: advanced_crawl.rs  basic_crawl.rs  before_after_comparison.rs  bindings.py  recipe_file_usage.rs  rt_movies.rs  simple_crawl.rs  test_browser_links.rs  test_browser_local.rs  test_content_extraction.rs  test_url_normalization.rs
examples/hn_crawl/: 01_login.yaml  02_crawl.yaml  03_article.yaml  hn_pages.json  test.py
examples/hn_crawl/scripts/: clean_content.py
examples/recipes/: README.md  basic_crawl.yaml  browser_crawl.yaml  documentation_crawl.yaml  resumable_crawl.yaml
examples/recipes/hn_crawl/: 01_login.yaml  02_crawl.yaml  03_article.yaml  pipeline.yaml  test.py  transform_skeleton.py
examples/rt/: discover.yaml  extract.yaml  run.py
examples/rt/scripts/: clean_synopsis.py  extract_links.py
src/: browser.rs  content.rs  error.rs  hooks.rs  http_client.rs  lib.rs  main.rs  output.rs  pipeline.rs  session.rs  state.rs  transformers.rs
tests/: integration_test.rs  integration_tests.rs
